# Echoless

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  THIRD-PARTY-LICENSES.md
.github/workflows/: build.yml
Design/: icon-ideas.html
app/: README.md  README.zh-CN.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
app/scripts/: gen-icon.py  prepare-tauri-assets.mjs  smoke-tauri-bundle.mjs  smoke-windows-installed-app.ps1
app/src/: App.tsx  advancedPipeline.test.ts  api.ts  bootGate.test.ts  bootGate.ts  configToml.test.ts  devBrowserShim.ts  engineLogic.test.ts  engineLogic.ts  engineSelection.test.ts  i18n.tsx  main.tsx  nvafx.ts  nvafxProgress.test.ts  probeQuality.test.ts  probeQuality.ts  runEventDisplay.ts  runEvents.test.ts  runGeneration.test.ts  runGeneration.ts  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml  (+1 more)
audit/: EXECUTION_CHECKLIST.md  FIX_PROGRESS.md
configs/: example.toml
crates/echoless-cli/: Cargo.toml
crates/echoless-cli/src/: audio_commands.rs  backends.rs  cli.rs  config_validate.rs  main.rs  nvafx_install.rs  offline.rs  probe_delay.rs  processor_manifest.rs  realtime.rs  run_command.rs
crates/echoless-cli/src/realtime/: control.rs  devices.rs  diagnostics.rs  emit.rs  frame_ring.rs  macos_process_tap.rs  resample.rs  stats.rs
crates/echoless-core/: Cargo.toml
crates/echoless-hal/: Cargo.toml
crates/echoless-hal-mac/: Cargo.toml
crates/echoless-hal-mac/src/: lib.rs
crates/echoless-hal-win/: Cargo.toml
crates/echoless-hal-win/src/: lib.rs
crates/echoless-processors/: Cargo.toml
crates/echoless-processors/src/: aec3.rs  chain.rs  lib.rs  localvqe.rs  nvafx.rs  passthrough.rs  registry.rs  rnnoise.rs  sonora_aec3.rs
crates/echoless-processors/tests/: echo_cancellation.rs  processor_chain_alloc.rs  sonora_direct.rs
docs/: ARCHITECTURE.md  ARCHITECTURE.zh-CN.md  CLI.md  CLI.zh-CN.md  NOISE_SUPPRESSION_ARCHITECTURE.zh-CN.md  NOISE_SUPPRESSION_SPEC.zh-CN.md  PHASE2_BACKLOG.md  PROBE_QUALITY_IMPROVEMENT.zh-CN.md  README.md  localvqe_inference.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
docs/architecture/: AEC3_DELAY_MOD_PLAN.md  AEC3_INTERNALIZATION_PLAN.md  native_hal_scope.md
docs/audit/: ARCH3_FE3_HOT_CONTROL_PLAN.md  PROGRESS.md  UI_ISSUES_VERIFICATION_20260703.md
docs/codex-tasks/: TASK_P3_AEC3_INTERNALIZE.md  TASK_P4_AEC3_DELAY_MOD.md  TASK_P5_WIN_TRAY.md
(+55 files in other folders)
