[package]
name = "echoless-hal-mac"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "macOS HAL 后端(CoreAudio AUHAL + Process Tap + AudioServerPlugin/BlackHole + mach)。骨架阶段为 stub。"

[dependencies]
anyhow.workspace = true
echoless-hal = { path = "../echoless-hal" }

# 实现阶段开启(target-specific):
# [target.'cfg(target_os = "macos")'.dependencies]
# coreaudio-sys = "0.2"
# objc2 = "0.5"
# core-foundation = "0.10"
