[package]
name = "echoless-hal-win"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Windows HAL 后端(WASAPI mic/loopback + WaveRT/VB-Cable + QPC)。骨架阶段为 stub。"

[dependencies]
anyhow.workspace = true
echoless-hal = { path = "../echoless-hal" }

# 实现阶段开启(target-specific,不污染 macOS 构建):
# [target.'cfg(windows)'.dependencies]
# windows = { version = "0.58", features = [
#   "Win32_Media_Audio", "Win32_System_Com", "Win32_Foundation",
#   "Win32_System_Threading", "Win32_Security",
# ] }
