[package]
name = "echoless-processors"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "统一回声处理节点:EchoProcessor trait + ProcessorChain(可单开/串联/组合/扩展)+ sonora/localvqe 节点"

[dependencies]
anyhow.workspace = true
toml.workspace = true
serde.workspace = true
# 经典 AEC3 引擎(纯 Rust WebRTC AudioProcessing 移植)。BSD-3,edition 2024 / MSRV 1.91。
# 默认特性 sonora-engine 开启;关掉则 sonora_aec3 节点回退为直通(便于无网络/快速构建)。
sonora = { git = "https://github.com/dignifiedquire/sonora", optional = true }

[features]
default = ["sonora-engine"]
sonora-engine = ["dep:sonora"]
